- moved css from app.css to piston module css file as it only pertains to the one html page - created columnCards as ID rather than class for easy insertion to <div> - corrected error where all information was wrapped in one card

--- a/dashboard/css/app.css
+++ b/dashboard/css/app.css
@@ -1018,15 +1018,4 @@ span.s-up {
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
-.columnCards {
-    border-style: 1px solid #eee;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    margin-right: 20px;
-    width: 30%;
-    min-width: 275px;
-    height: 100%;
-    min-height: 325px;
-}
+
