--- a/dashboard/css/modules/piston.module.css
+++ b/dashboard/css/modules/piston.module.css
@@ -1451,3 +1451,15 @@ dnd-nodrag[disabled] * {
 	}
 }
 
+#columnCards {
+    border-style: 1px solid #eee;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 20px;
+    width: 30%;
+    min-width: 275px;
+    height: 100%;
+    min-height: 325px;
+}
